address PR comments:
- use String.format for lower jvm version compatibility
- refactor initStatement function to return PreparedStatement
- bump version to use published riot with necessary changes